test_regress/t/t_config_rules.out
%Error-UNSUPPORTED: t/t_config_rules.v:24:1: Unsupported: config
   24 | config cfg;
      | ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_config_rules.v:25:10: Unsupported: config cell
   25 |   design t;
      |          ^
%Error-UNSUPPORTED: t/t_config_rules.v:28:3: Unsupported: config rule
   28 |   default liblist;   
      |   ^~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:29:3: Unsupported: config rule
   29 |   default liblist liba libb;
      |   ^~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:33:3: Unsupported: config rule
   33 |   instance t.m20 liblist;   
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:34:3: Unsupported: config rule
   34 |   instance t.m21 liblist libc;
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:35:3: Unsupported: config rule
   35 |   instance t.m22 liblist libc libd;   
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:36:3: Unsupported: config rule
   36 |   instance t.m23 liblist libc libd;   
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:37:3: Unsupported: config rule
   37 |   instance t.m24 liblist libc libd;   
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:40:3: Unsupported: config rule
   40 |   instance t.m30 use cell_identifier;
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:40:18: Unsupported: config use
   40 |   instance t.m30 use cell_identifier;
      |                  ^~~
%Error-UNSUPPORTED: t/t_config_rules.v:41:3: Unsupported: config rule
   41 |   instance t.m31 use lib_id.cell_id;
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:41:18: Unsupported: config use
   41 |   instance t.m31 use lib_id.cell_id;
      |                  ^~~
%Error-UNSUPPORTED: t/t_config_rules.v:42:3: Unsupported: config rule
   42 |   instance t.m32 use #();
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:42:18: Unsupported: config use
   42 |   instance t.m32 use #();
      |                  ^~~
%Error-UNSUPPORTED: t/t_config_rules.v:45:3: Unsupported: config rule
   45 |   cell m40 liblist libc libd;
      |   ^~~~
%Error-UNSUPPORTED: t/t_config_rules.v:45:8: Unsupported: config cell
   45 |   cell m40 liblist libc libd;
      |        ^~~
%Error-UNSUPPORTED: t/t_config_rules.v:46:3: Unsupported: config rule
   46 |   cell work.m41 liblist libc libd;
      |   ^~~~
%Error-UNSUPPORTED: t/t_config_rules.v:46:8: Unsupported: config cell
   46 |   cell work.m41 liblist libc libd;
      |        ^~~~
%Error-UNSUPPORTED: t/t_config_rules.v:47:3: Unsupported: config rule
   47 |   cell m42 use m42alt;
      |   ^~~~
%Error-UNSUPPORTED: t/t_config_rules.v:47:8: Unsupported: config cell
   47 |   cell m42 use m42alt;
      |        ^~~
%Error-UNSUPPORTED: t/t_config_rules.v:47:12: Unsupported: config use
   47 |   cell m42 use m42alt;
      |            ^~~
%Error-UNSUPPORTED: t/t_config_rules.v:48:3: Unsupported: config rule
   48 |   cell work.m43 use work.m43alt;
      |   ^~~~
%Error-UNSUPPORTED: t/t_config_rules.v:48:8: Unsupported: config cell
   48 |   cell work.m43 use work.m43alt;
      |        ^~~~
%Error-UNSUPPORTED: t/t_config_rules.v:48:17: Unsupported: config use
   48 |   cell work.m43 use work.m43alt;
      |                 ^~~
%Error: Specified --top-module 'cfg' was not found in design.
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
